--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --second-btn-color: #F4F4FD;
   --fons-color: #FFFFFF;
   --bordeer-color: #E7E9FC;
+  --linear-gradient:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
 }
 
 
@@ -163,6 +164,11 @@ gap: 40px;
 
 .hero{
     background-color: var(--second-title-color);
+    background-image:var(--linear-gradient),
+    url(../images/people-officee.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding-top: 188px;
     padding-bottom: 188px;
 }
@@ -179,7 +185,7 @@ gap: 40px;
     
 }
 /*---------------------------------HERO---------------*/
-/*---------------------------------SECTION 1---------------*/
+/*---------------------------------About---------------*/
 .about {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -190,8 +196,15 @@ gap: 40px;
     gap: 24px;
 }
 
-.about-item {
+.container-about {
+padding: 24px 100px;
+background-color: var(--second-btn-color);
+margin-bottom: 8px;
+border-radius: 4px;
 }
+
+.about-svg-icon {}
+
 
 
 .about-pre-title {
@@ -211,7 +224,7 @@ gap: 40px;
     margin-bottom: 8px;
     
  }
-/*---------------------------------SECTION 1---------------*/
+
 /*---------------------------------work---------------*/
  
 .work {
@@ -235,7 +248,7 @@ gap: 40px;
 
 
 .work-item {}
-/*---------------------------------work---------------*/
+
 
 /*---------------------------------TEAM---------------*/
 .team {
@@ -286,10 +299,84 @@ font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--Fourth-title-color);
+    margin-bottom: 8px;
 }
 
-/*---------------------------------TEAM---------------*/
+.team-soc-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
 
+.team-soc-item {
+    width: 40px;
+    height: 40px;
+}
+
+.team-soc-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:var(--mein-btn-color);
+}
+.team-soc-link:hover,
+ team-soc-link:focus{
+background-color: var(--focus-btn-color);
+}
+
+/*---------------------------------Customers--------------*/
+.Customers {
+    padding-top: 130px;
+    padding-bottom: 120px;
+}
+.customers-title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+    color: var(--second-title-color);
+    text-align: center;
+    margin-bottom: 72px;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+   
+}
+.customers-list {
+    display: flex;
+    gap: 24px;
+}
+
+.customers-item {
+    width: calc((100%-120px)/6);
+    height: 90px;
+   
+}
+
+.customers-link {
+    border: 1px solid #8E8F99;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.customers-svg {
+    fill: #8E8F99;
+}
+
+.customers-link:is(:hover, :focus) {
+    border-color: var(--focus-btn-color);
+}
+
+.customers-link:is(:hover, :focus) .customers-svg {
+    fill: var(--focus-btn-color);
+}
+
+.custmers-item {}
 
 /*---------------------------------FOOTER---------------*/
 .footer {
