--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,13 @@ border-radius: 4px;
     border-radius: 0px 0px 4px 4px;
 }
 
+.shadow-team{
+    background: #ffffff;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
+}
+
 .team-name{
     text-align: center;
     padding: 32px 16px;
@@ -414,6 +421,48 @@ background-color: var(--focus-btn-color);
         
 }
 
+.foot-container{
+  display: flex;
+  gap: 120px;
+}
+
+
+.footer-soc-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+.footer-soc {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-item {
+    width: 40px;
+        height: 40px;
+}
+
+.footer-link-soc {
+    display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.1);
+}
+
+.footer-link-soc:hover,
+.footer-link-soc:focus{
+ background-color:  #31D0AA;
+}
+
+
+/*---------------------------------portfilio---------------*/
 .portfolio{
 padding-top: 96px;
 padding-bottom: 120px;
@@ -439,12 +488,18 @@ padding-bottom: 120px;
 
      
 }
-
+.portfolio-btn:active,
 .portfolio-btn:hover,
 .portfolio-btn:focus{
     color: var(--mein-title-color);
     background-color: var(--focus-btn-color);
+    box-shadow:
+            0px 3px 1px rgba(0, 0, 0, 0.1),
+            0px 2px 1px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+            border-color: transparent;
 }
+
 
 .portfolio-nav-list {
    display: flex;
@@ -458,6 +513,14 @@ flex-wrap: wrap;
 gap: 48px 24px;
 }
 
+.portfolio-shadow:hover,
+.portfolio-shadow:focus
+{
+ 
+ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+0px 1px 1px rgba(46, 47, 66, 0.16),
+0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .portfolio-item {
 }
 
