--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ gap: 40px;
     background-size: cover;
     padding-top: 188px;
     padding-bottom: 188px;
-    max-width: 1440рх;
+    max-width: 1440px;
     height: 600px;
     margin: 0 auto;
 }
@@ -530,7 +530,7 @@ gap: 48px 24px;
 }
 .portfolio-card-link{
  display: block;
- border: 0,5px solid #f4f4fd;       
+     
 }
 
 .portfolio-card-link:hover,
